fixed the shift key, all keys functional

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -190,7 +190,7 @@ key:active, key.active {
     @include keyshadowhover;
 }
 
-key.tab, key.shift, key.caps, key.delete, key.return {
+key.tab, key.shft, key.caps, key.delete, key.return {
     font-size: 15px;
     padding: .5em 0;
 }
